# simpleai_p

./: .gitignore  CREATEME.md  README.md  pyproject.toml  requirements.txt
claude/skills/simpleai/: SKILL.md
src/llm_provider/: __init__.py  config.py  errors.py  factory.py  json_extractor.py  models.py  provider.py  retry.py
src/llm_provider/providers/: __init__.py  anthropic_provider.py  base_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py
tests/: __init__.py  test_anthropic_provider.py  test_async_chat.py  test_errors.py  test_factory.py  test_gemini_provider.py  test_integration.py  test_json_extractor.py  test_models.py  test_openai_provider.py  test_providers.py  test_retry.py  test_tool_calling.py
