[build-system]
requires = ["setuptools>=82.0", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-provider"
version = "0.1.0"
description = "A unified abstraction layer for interacting with multiple LLM providers"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.33.0",
    "pydantic>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]
gemini = [
    "google-genai>=1.73.0",
]
openai = [
    "openai>=2.0.0",
]
anthropic = [
    "anthropic>=0.97.0",
]
all = [
    "google-genai>=1.73.0",
    "openai>=2.0.0",
    "anthropic>=0.97.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

